# uart_feather-m4_rs

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x
.github/workflows/: build.yml
scripts/: flash.sh
src/: blink_led.rs  lib.rs  main.rs
src/common/: mod.rs
