[package]
authors = ["Alex Brinister <brinisal@tutamail.com>"]
edition = "2021"
readme = "README.md"
name = "blink_led-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
feather_m4 = "0.14.0"
nb = "1.1.0"

[features]
use_semihosting = []

[[bin]]
name = "blink_led"
path = "src/blink_led.rs"
