[package]
authors = ["Alex Brinister <brinisal@tutamail.com>"]
edition = "2021"
readme = "README.md"
name = "blink_led-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
feather_m4 = "0.14.0"
nb = "1.1.0"

[features]
use_semihosting = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
incremental = false
opt-level = "z"
panic = "abort"
